Fix layout break caused by long strings e.g url in activity log notes, fix will apply to activity log and alerts

--- a/assets/scss/components/_note.scss
+++ b/assets/scss/components/_note.scss
@@ -1,4 +1,7 @@
 .app-note {
+    overflow-wrap: break-word;
+    word-break: break-word;
+
     .app-note__author {
         @include govuk-responsive-margin(2, "bottom");
     }
